# achkasov_dev

./: .dockerignore  .env.example  .gitignore  DOCKER_SETUP.md  Dockerfile  Dockerfile.backend  Dockerfile.frontend  MODERNIZATION_PLAN.md  Makefile  README.md  README_DOCKER.md  TROUBLESHOOTING.md  create_admin_user.py  create_tables.py  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 8f1c1cf3d672_create_login_admin_table.py
backend/: README.md  alembic.ini  requirements.txt
backend/alembic/versions/: 20260316_hero_image_url_text.py
backend/src/: main.py
backend/src/application/services/: __init__.py  admin_repository.py
backend/src/application/use_cases/: __init__.py
backend/src/core/: __init__.py
backend/src/core/entities/: __init__.py  base.py  contact.py  page.py
backend/src/core/exceptions/: __init__.py  domain.py
backend/src/shared/: config.py
frontend/: README.md  next.config.mjs  package-lock.json  package.json  script.js  styles.css
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/admin/: page.tsx
frontend/app/admin/blog/: page.tsx
frontend/app/blog/: page.tsx
frontend/components/: ckeditor.tsx  cookie-banner.tsx  floating-contact-form.tsx  footer.tsx  header.tsx  preloader.tsx  scroll-reveal.tsx  service-modal.tsx
src/application/: __init__.py
src/application/services/: page_repository.py
src/core/entities/: __init__.py  base.py  page.py
src/infrastructure/: __init__.py
src/infrastructure/api/: __init__.py  dependencies.py
src/infrastructure/db/: __init__.py  models.py  static_data.py
(+32 files in other folders)
